tdf#92026 docxexport: eliminate fake tblBorders

This patch depends on tdf#119760.

The border was based on whatever cell A1 had, but that fake
default was never passed to the cell's functions, so the
table border definition served no purpose whatsoever.
Cells had no idea whether they needed to override those
default borders, and this was bad for non-borders, because
then the default borders were assigned instead of none.

The other option would be to properly fill m_aTableStyleConf,
but that didn't seem valuable. Better, and less code churn,
to just eliminate the function altogether. (Well, the
empty function kept in place as a placeholder for
someone who decides it could be useful to reduce
the number of borders written out per cell.)

Unit test fdo80097.docx's fix was just trying to
prevent an invalid table border. Since that is still
obviously true when no table border is defined,
it is valid to just eliminate this part of the test.
(Having a table definition wouldn't be invalid
in the future, so I'm not testing for zero instances.)

Change-Id: I983dbe120bfc3354fefd14bc95ac01abccea7ea8